Import of CELOGEEK/WWW-Shorten-SCK-0.5 from CPAN.
gitpan-cpan-distribution: WWW-Shorten-SCK
gitpan-cpan-version:      0.5
gitpan-cpan-path:         CELOGEEK/WWW-Shorten-SCK-0.5.tar.gz
gitpan-cpan-author:       CELOGEEK
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 
 
 This archive contains the distribution WWW-Shorten-SCK,
-version 0.4:
+version 0.5:
 
-  Perl interface to sck.to
+  Perl interface to sck.pm
 
 This software is copyright (c) 2013 by celogeek <me@celogeek.com>.
 
